--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,10 @@ body {
   color: #ecf0f1;
 }
 
+.appointment__summary--updated {
+  background: #f1c40f;
+}
+
 .appointment__content {
   padding-top: 10px;
   padding-bottom: 25px;
